RESOLVED FIXED17974
REGRESSION: npfunctions.h should not import npruntime_internal.h
https://bugs.webkit.org/show_bug.cgi?id=17974
Summary REGRESSION: npfunctions.h should not import npruntime_internal.h
Mark Rowe (bdash)
Reported 2008-03-20 17:20:28 PDT
npfunctions.h is a public header file on the Mac, so it must not import npruntime_internal.h.
Attachments
Patch to rearrange includes (2.81 KB, patch)
2008-03-21 06:37 PDT, Rodney Dawes
mrowe: review+
Mark Rowe (bdash)
Comment 1 2008-03-20 17:21:07 PDT
Mark Rowe (bdash)
Comment 2 2008-03-20 17:21:31 PDT
Rodney, your change introduced this include. Are you able to restructure things so that this import is not required?
Rodney Dawes
Comment 3 2008-03-21 06:37:53 PDT
Created attachment 19923 [details] Patch to rearrange includes
Mark Rowe (bdash)
Comment 4 2008-03-21 22:17:50 PDT
Comment on attachment 19923 [details] Patch to rearrange includes r=me
Mark Rowe (bdash)
Comment 5 2008-03-22 15:03:12 PDT
Landed in r31234.
Note You need to log in before you can comment on or make changes to this bug.